--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "my-react-portfolio",
+  "homepage": "https://Pramyagit.github.io/react-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run bulid ",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
